Sutter Health/src/objects/Survey_Feedback_Item__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Email_to_L1__c</fullName>
        <label>Email to L1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_to_L2__c</fullName>
        <label>Email to L2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>L1_Owner__c</fullName>
        <label>L1 Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2_Owner__c</fullName>
        <label>L2 Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Survey Feedback</label>
</CustomObject>